fixed divs and z-indexes of topbuttons, carousel, and map

--- a/app/assets/stylesheets/locations.scss
+++ b/app/assets/stylesheets/locations.scss
@@ -133,6 +133,7 @@ h1, h3 {
 	width: 90%;
 	height: 50px;
 	font-size: 12px;
+  z-index: 3;
 }
 
 .btn-container-outer {
@@ -142,6 +143,8 @@ h1, h3 {
 	text-align: center;
 	background-color: transparent;
 	width: 100%;
+  top: 180px;
+  position: absolute;
 }
 .spacing{
   padding-left: 4%;
@@ -175,18 +178,18 @@ h1, h3 {
     height: 100%;
 }
 
-.image-container {
-	position: relative;
-	height: 300px;
-  overflow: hidden;
-}
+// .image-container {
+// 	position: relative;
+// 	height: 300px;
+//   overflow: hidden;
+// }
 
 .carousel-button {
-  z-index: -1;
+  z-index: 0;
 }
 
 .carousel-front {
-  z-index: 1;
+  z-index: 2;
   opacity: 0;
 }
 
@@ -199,20 +202,20 @@ h1, h3 {
 .loc-header-buttons-container {
 	position: absolute;
 	width: 100%;
-	top: 200px;
-  z-index: 0;
+	top: 100px;
+  z-index: 1;
 }
 
-@media (min-width: $sm) {
-	.image-container {
-		width: auto;
-		height: 200px;
-    overflow: hidden;
-	}
-	.loc-header-buttons-container {
-		top: 100px;
-	}
-}
+// @media (min-width: $sm) {
+// 	.image-container {
+// 		width: auto;
+// 		height: 200px;
+//     overflow: hidden;
+// 	}
+// 	.loc-header-buttons-container {
+// 		top: 100px;
+// 	}
+// }
 
 // @media (min-width: $md) {
 // 	.image-container {
